--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Joshua Ngomeli",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "parser": "^0.1.4"
